syntax = "proto3";

option csharp_namespace = "StreamGrpcServerPlayground";

package greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
